# gate22-poc

./: README.md
.github/workflows/: backend-checks.yml
backend/: .env.example  Dockerfile  compose.ci.yml  compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/exfil_plugin_pkg/: pyproject.toml
backend/exfil_plugin_pkg/exfil_plugin/: __init__.py
backend/tests/: test_basic.py
