[project]
name = "gate22-backend"
version = "0.1.0"
description = "Gate22 backend"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
